# harmony-teacher-api

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONSENT.md  ETHICS.md  THREAT_MODEL.md
teacher_api/: __init__.py  api.py
teacher_api/collaboration/: __init__.py  channels.py
teacher_api/consent/: __init__.py  manager.py
teacher_api/context/: __init__.py
teacher_api/ethics/: __init__.py  constraints.py
teacher_api/grading/: __init__.py  feedback_drafts.py
teacher_api/planner/: __init__.py  lesson_generator.py
teacher_api/provenance/: __init__.py  audit_log.py  hashing.py
teacher_api/security/: __init__.py  encryption.py  key_management.py
teacher_api/signals/: __init__.py  core_math.py
teacher_api/support/: __init__.py  awareness_flags.py
tests/: conftest.py  test_consent.py  test_ethics.py  test_provenance.py  test_security.py  test_signals.py
